--- a/sitemap.html
+++ b/sitemap.html
@@ -30,8 +30,6 @@
             <li><a href="education.html" class="">Education</a></li>
             <li><a href="skills.html" class="">Skills</a></li>
             <li><a href="extra.html" class="">Extra</a></li>
-            <li><a href="python.html" class="">PythonIDE</a></li>
-            <li><a href="origins_banner.html" class="">Origin Banner Gen</a></li>
             <li><a href="sitemap.html" class="active">Site Map</a></li>
         </ul>
     </nav>
@@ -82,6 +80,10 @@
                 <li>
                     <a href="origins_banner.html" class="neon-text-sub">Origin Banner Gen</a>
                     <span class="file-path">/ origins_banner.html</span>
+                </li>
+                <li>
+                    <a href="infiniterpg.html" class="neon-text-sub">AI RPG</a>
+                    <span class="file-path">/ infiniterpg.html</span>
                 </li>
                 <li>
                     <a href="sitemap.html" class="neon-text-sub">Site Map</a>
