--- a/infiniterpg.html
+++ b/infiniterpg.html
@@ -215,7 +215,7 @@
 
         let API_KEY = "";
         let CURRENT_LANG = "en";
-        let conversationHistory = [];
+        let conversationHistory = []; // Stores the full story history
 
         document.getElementById('start-btn').onclick = async () => {
             API_KEY = document.getElementById('api-key').value;
@@ -224,10 +224,8 @@
 
             if (!API_KEY) { alert("Please enter an API Key"); return; }
 
-            // Reset History for new game
             conversationHistory = [];
-            chatWindow.innerHTML = ''; // Clear previous chat UI
-
+            chatWindow.innerHTML = '';
             setupArea.classList.add('hidden');
             gameDisplay.style.display = 'flex';
 
@@ -242,20 +240,13 @@
             addMessage(userText, 'user-msg');
             setLoading(true);
 
-            // 1. Add the user's current choice/prompt to the history
             conversationHistory.push({ role: "user", content: userText });
 
             const systemInst = CURRENT_LANG === 'en' ?
-                "You are an RPG DM. Provide a story paragraph, then 4 numbered choices (1. 2. 3. 4.). Reply in English." :
-                "你而家係一位 RPG 地城生成主（Dungeon Master）。請提供一段故事情節，然後俾出 4 個編號選擇（1. 2. 3. 4.）。以廣東話回答。";
+                "You are an RPG DM. Provide a story paragraph, then 4 numbered choices (1. 2. 3. 4.) at the very end. IMPORTANT: Place the choices on new lines at the bottom." :
+                "你是一位 RPG 地城生成主。提供一段故事情節，並在最後提供 4 個編號選擇（1. 2. 3. 4.）。請確保選擇放在訊息的最底部。";
 
             try {
-                // 2. Prepare the payload with the System Instruction + full History
-                const fullMessages = [
-                    { role: "system", content: systemInst },
-                    ...conversationHistory
-                ];
-
                 const response = await fetch('https://api.poe.com/v1/chat/completions', {
                     method: 'POST',
                     headers: {
@@ -264,29 +255,53 @@
                     },
                     body: JSON.stringify({
                         model: "assistant",
-                        messages: fullMessages // Use the full history here
+                        messages: [{ role: "system", content: systemInst }, ...conversationHistory]
                     })
                 });
 
                 const data = await response.json();
-                const aiText = data.choices[0].message.content;
+                const aiResponse = data.choices[0].message.content;
 
-                // 3. Save the AI response to history so it remembers its own story
-                conversationHistory.push({ role: "assistant", content: aiText });
+                conversationHistory.push({ role: "assistant", content: aiResponse });
+                processAIResponse(aiResponse);
 
-                await typeWriter(aiText);
-                parseOptions(aiText);
             } catch (e) {
-                // Fallback logic remains, but normally you'd push this to history too if it was a real response
                 const fallback = CURRENT_LANG === 'en' ?
-                    "The mist clears. You see a castle.\n1. Enter\n2. Scout\n3. Wait\n4. Cast" :
-                    "迷雾散去。你看到一座城堡。\n1. 进入\n2. 侦查\n3. 等待\n4. 施法";
-
-                conversationHistory.push({ role: "assistant", content: fallback });
-                await typeWriter(fallback);
-                parseOptions(fallback);
+                    "The mist clears. You see a castle.\n1. Enter the gates\n2. Scout the perimeter\n3. Wait for nightfall\n4. Cast a spell" :
+                    "迷雾散去。你看到一座城堡。\n1. 进入大门\n2. 侦查四周\n3. 等待夜幕降临\n4. 施放法术";
+                processAIResponse(fallback);
             } finally {
                 setLoading(false);
+            }
+        }
+
+        function processAIResponse(fullText) {
+            // Regex explanation: Look for lines starting with 1., 2., 3., 4. at the end of the string
+            const optionsRegex = /\n?\d\.\s*(.*)(?=\n|$)/g;
+
+            // Extract the options
+            const matches = [...fullText.matchAll(optionsRegex)];
+            let storyText = fullText;
+            let extractedChoices = [];
+
+            if (matches.length >= 4) {
+                // We take the LAST 4 matches to ensure we don't grab a list from the middle of the story
+                const lastFour = matches.slice(-4);
+                extractedChoices = lastFour.map(m => m[1]);
+
+                // Remove the choices from the story text by finding the index of the first choice
+                const firstChoiceIndex = lastFour[0].index;
+                storyText = fullText.substring(0, firstChoiceIndex).trim();
+            }
+
+            // 1. Display Story in Chat (Typewriter + Markdown)
+            typeWriter(storyText);
+
+            // 2. Update Buttons
+            if (extractedChoices.length >= 4) {
+                btns.forEach((btn, idx) => {
+                    btn.innerText = extractedChoices[idx];
+                });
             }
         }
 
@@ -299,14 +314,11 @@
             return new Promise(resolve => {
                 function innerType() {
                     if (i < text.length) {
-                        // 1. Get the substring up to current point
                         const currentText = text.substring(0, i + 1);
-                        // 2. Convert Markdown to HTML and inject it
-                        msgDiv.innerHTML = marked.parse(currentText);
-
+                        msgDiv.innerHTML = marked.parse(currentText); // Render Markdown while typing
                         chatWindow.scrollTop = chatWindow.scrollHeight;
                         i++;
-                        setTimeout(innerType, 15); // Slightly faster for Markdown
+                        setTimeout(innerType, 10);
                     } else {
                         resolve();
                     }
@@ -315,24 +327,9 @@
             });
         }
 
-        function parseOptions(text) {
-            // Extracts lines starting with 1., 2., etc.
-            const lines = text.split('\n');
-            let optionIndex = 0;
-
-            lines.forEach(line => {
-                const match = line.match(/^\d\.\s*(.*)/);
-                if (match && optionIndex < 4) {
-                    btns[optionIndex].innerText = match[1];
-                    optionIndex++;
-                }
-            });
-        }
-
         function addMessage(text, className) {
             const div = document.createElement('div');
             div.className = `msg ${className}`;
-            // Parse markdown for user messages too
             div.innerHTML = marked.parse(text);
             chatWindow.appendChild(div);
             chatWindow.scrollTop = chatWindow.scrollHeight;
