Added Chord Maker

--- a/sitemap.html
+++ b/sitemap.html
@@ -86,6 +86,10 @@
                     <span class="file-path">/ infiniterpg.html</span>
                 </li>
                 <li>
+                    <a href="chordsmaker.html" class="neon-text-sub">Chord Maker</a>
+                    <span class="file-path">/ chordsmaker.html</span>
+                </li>
+                <li>
                     <a href="sitemap.html" class="neon-text-sub">Site Map</a>
                     <span class="file-path">/ sitemap.html</span>
                 </li>
