--- a/chordsmaker.html
+++ b/chordsmaker.html
@@ -213,6 +213,19 @@
                 <input type="checkbox" id="bassToggle" checked> Bass On
                 <input type="range" id="bassVol" min="0" max="1" step="0.1" value="0.6" style="width:80px">
             </div>
+            <h4>C:       Major</h4>
+            <h4>Cm:      Minor</h4>
+            <h4>Cmin:    Minor</h4>
+            <h4>C7:      Dominant 7</h4>
+            <h4>C5:      Power chord</h4>
+            <h4>Cdim:    Diminished</h4>
+            <h4>Cdim7:   Diminished 7</h4>
+            <h4>Caug:    Augmented</h4>
+            <h4>Csus2:   Suspended 2</h4>
+            <h4>Csus4:   Suspended 4</h4>
+            <h4>Cmaj7:   Major 7</h4>
+            <h4>Cm7:     Minor 7</h4>
+            <h4>C7sus4:  7 suspended 4</h4>
         </div>
 
         <div class="main-content">
@@ -468,11 +481,61 @@
 
         function getTransposedFrequencies(name) {
             if (!name) return [];
-            let root = name.replace('M', ''); let isMinor = name.includes('M');
-            if (root === 'DB') root = 'C#'; if (root === 'EB') root = 'D#'; if (root === 'GB') root = 'F#'; if (root === 'AB') root = 'G#'; if (root === 'BB') root = 'A#';
-            let idx = notesScale.indexOf(root); if (idx === -1) return [];
-            let tIdx = (idx + globalTranspose) % 12; if (tIdx < 0) tIdx += 12;
-            return [notesFreq[notesScale[tIdx]], notesFreq[notesScale[(tIdx + (isMinor ? 3 : 4)) % 12]], notesFreq[notesScale[(tIdx + 7) % 12]]];
+
+            // 1. Define chord interval maps (semitones from root)
+            const chordIntervals = {
+                "": [0, 4, 7],         // Major
+                "M": [0, 3, 7],        // Minor (Your existing 'M' notation)
+                "MIN": [0, 3, 7],      // Minor
+                "7": [0, 4, 7, 10],    // Dominant 7
+                "5": [0, 7],           // Power chord
+                "DIM": [0, 3, 6],      // Diminished
+                "DIM7": [0, 3, 6, 9],  // Diminished 7
+                "AUG": [0, 4, 8],      // Augmented
+                "SUS2": [0, 2, 7],     // Suspended 2
+                "SUS4": [0, 5, 7],     // Suspended 4
+                "MAJ7": [0, 4, 7, 11], // Major 7
+                "M7": [0, 3, 7, 10],   // Minor 7
+                "7SUS4": [0, 5, 7, 10] // 7 suspended 4
+            };
+
+            // 2. Separate Root from Quality (e.g., "C#MAJ7" -> root: "C#", quality: "MAJ7")
+            // This regex looks for the note (C, C#, Eb, etc) and captures the rest
+            let match = name.match(/^([A-G][#B]?)(.*)$/i);
+            if (!match) return [];
+
+            let root = match[1].toUpperCase();
+            let quality = match[2].toUpperCase();
+
+            // Normalizing sharps/flats for your notesScale array
+            if (root === 'DB') root = 'C#';
+            if (root === 'EB') root = 'D#';
+            if (root === 'GB') root = 'F#';
+            if (root === 'AB') root = 'G#';
+            if (root === 'BB') root = 'A#';
+
+            let rootIdx = notesScale.indexOf(root);
+            if (rootIdx === -1) return [];
+
+            // Apply global transpose to root
+            let transposedRootIdx = (rootIdx + globalTranspose) % 12;
+            if (transposedRootIdx < 0) transposedRootIdx += 12;
+
+            // 3. Get intervals for the detected quality, default to Major if not found
+            const intervals = chordIntervals[quality] || chordIntervals[""];
+
+            // 4. Map intervals to frequencies
+            return intervals.map(semi => {
+                let noteIdx = (transposedRootIdx + semi) % 12;
+                let noteName = notesScale[noteIdx];
+                let freq = notesFreq[noteName];
+
+                // Basic octave handling: if the interval goes "above" the root, 
+                // ensure the frequency is mathematically higher
+                if (transposedRootIdx + semi >= 12) freq *= 2;
+
+                return freq;
+            });
         }
 
         function stopPlayback() { isPlaying = false; document.getElementById('playBtn').disabled = false; document.querySelectorAll('.bar').forEach(b => b.classList.remove('playing')); }
