--- a/chordsmaker.html
+++ b/chordsmaker.html
@@ -172,7 +172,7 @@
         <ul class="nav-links">
 
             <li><a href="index.html" class="">Home</a></li>
-            <li><a href="experience.html" class="active">Experience</a></li>
+            <li><a href="experience.html" class="">Experience</a></li>
             <li><a href="education.html" class="">Education</a></li>
             <li><a href="skills.html" class="">Skills</a></li>
             <li><a href="extra.html" class="">Extra</a></li>
