--- a/mathpalm.html
+++ b/mathpalm.html
@@ -36,7 +36,7 @@
 
 
     <div style="position:relative; width:100%; height:100vh;">
-        <iframe src="arcade_source.html"
+        <iframe src="mathpalm_source.html"
             style="position:absolute; top:0; left:0; width:100%; height:100%; border:none;"></iframe>
     </div>
     
