--- a/sitemap.html
+++ b/sitemap.html
@@ -90,6 +90,10 @@
                     <span class="file-path">/ chordsmaker.html</span>
                 </li>
                 <li>
+                    <a href="mathpalm.html" class="neon-text-sub">mathpalm</a>
+                    <span class="file-path">/ mathpalm.html</span>
+                </li>
+                <li>
                     <a href="sitemap.html" class="neon-text-sub">Site Map</a>
                     <span class="file-path">/ sitemap.html</span>
                 </li>
