Math Palm rename

--- a/sitemap.html
+++ b/sitemap.html
@@ -90,7 +90,7 @@
                     <span class="file-path">/ chordsmaker.html</span>
                 </li>
                 <li>
-                    <a href="mathpalm.html" class="neon-text-sub">mathpalm</a>
+                    <a href="mathpalm.html" class="neon-text-sub">Math Palm</a>
                     <span class="file-path">/ mathpalm.html</span>
                 </li>
                 <li>
