--- a/sitemap.html
+++ b/sitemap.html
@@ -94,6 +94,10 @@
                     <span class="file-path">/ mathpalm.html</span>
                 </li>
                 <li>
+                    <a href="michelle.html" class="neon-text-sub">Michelle</a>
+                    <span class="file-path">/ michelle.html</span>
+                </li>
+                <li>
                     <a href="sitemap.html" class="neon-text-sub">Site Map</a>
                     <span class="file-path">/ sitemap.html</span>
                 </li>
