--- a/michelle_source.html
+++ b/michelle_source.html
@@ -1,22 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Live2D Michelle with VITS Umamusume TTS + Poe Chat</title>
     <style>
-        body { display: flex; height: 95vh; margin: 0; font-family: Arial, sans-serif; }
-        #live2d-container { flex: 1; background: #f0f8ff00; position: relative; }
-        #canvas { width: 100%; height: 100%;}
-        #chat-container { width: 380px; display: flex; flex-direction: column; padding: 15px; background: #fff; border-left: 1px solid #ccc; }
-        #chat-history { flex: 1; overflow-y: auto; border: 1px solid #ddd; padding: 10px; margin-bottom: 10px; background: #fafafa; border-radius: 6px; }
-        .message { margin: 8px 0; padding: 8px 12px; border-radius: 12px; max-width: 85%; }
-        .user { background: #007bff; color: white; align-self: flex-end; }
-        .bot { background: #e9ecef; color: #333; align-self: flex-start; }
-        input, button { width: 100%; padding: 10px; margin: 6px 0; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box; }
-        button { background: #28a745; color: white; border: none; cursor: pointer; }
-        button:hover { background: #218838; }
-        #status { color: #555; font-size: 0.9em; margin-top: 5px; text-align: center; }
-        #model-error { position: absolute; top: 20px; left: 50%; transform: translateX(-50%); color: red; background: rgba(255,255,255,0.8); padding: 10px; border-radius: 8px; display: none; }
+        body {
+            display: flex;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            flex-direction: row;
+            /* Desktop default */
+        }
+
+        /* On small screens, stack vertically */
+        @media (max-width: 768px) {
+            body {
+                flex-direction: column;
+            }
+
+            #chat-container {
+                width: 100% !important;
+                height: 50vh;
+                border-left: none;
+                border-top: 1px solid #ccc;
+            }
+
+            #live2d-container {
+                height: 50vh;
+            }
+        }
+
+        #live2d-container {
+            flex: 1;
+            background: #f0f8ff;
+            position: relative;
+            overflow: hidden;
+        }
+
+        #canvas {
+            display: block;
+            width: 100%;
+            height: 100%;
+        }
+
+        #chat-container {
+            width: 380px;
+            display: flex;
+            flex-direction: column;
+            padding: 15px;
+            background: #fff;
+            border-left: 1px solid #ccc;
+        }
+
+        #chat-history {
+            flex: 1;
+            overflow-y: auto;
+            border: 1px solid #ddd;
+            padding: 10px;
+            margin-bottom: 10px;
+            background: #fafafa;
+            border-radius: 6px;
+        }
+
+        .message {
+            margin: 8px 0;
+            padding: 8px 12px;
+            border-radius: 12px;
+            max-width: 85%;
+        }
+
+        .user {
+            background: #007bff;
+            color: white;
+            align-self: flex-end;
+        }
+
+        .bot {
+            background: #e9ecef;
+            color: #333;
+            align-self: flex-start;
+        }
+
+        input,
+        button {
+            width: 100%;
+            padding: 10px;
+            margin: 6px 0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        button {
+            background: #28a745;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background: #218838;
+        }
+
+        #status {
+            color: #555;
+            font-size: 0.9em;
+            margin-top: 5px;
+            text-align: center;
+        }
+
+        #model-error {
+            position: absolute;
+            top: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            color: red;
+            background: rgba(255, 255, 255, 0.8);
+            padding: 10px;
+            border-radius: 8px;
+            display: none;
+        }
     </style>
 
     <!-- Live2D scripts -->
@@ -24,7 +129,9 @@
     <script src="https://cdn.jsdelivr.net/npm/pixi.js@7.4.2/dist/pixi.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/RaSan147/pixi-live2d-display@v0.5.0-ls-8/dist/cubism4.min.js"></script>
 </head>
+
 <body>
+
     <div id="live2d-container">
         <canvas id="canvas"></canvas>
         <div id="model-error">Live2D model failed to load. Check console & file path.</div>
@@ -36,7 +143,6 @@
         <button onclick="sendQuestion()">Send</button>
         <div id="status">TTS: Using Plachta VITS Umamusume (cute female Japanese voice)</div>
     </div>
-
     <script>
         // ────────────────────────────────────────────────
         // Live2D Setup
@@ -44,35 +150,79 @@
         let model;
         async function initLive2D() {
             const canvas = document.getElementById('canvas');
-            const app = new PIXI.Application({
+
+            app = new PIXI.Application({
                 view: canvas,
                 autoStart: true,
-                resizeTo: window,
+                resizeTo: document.getElementById('live2d-container'), // Resize to parent div
                 backgroundColor: 0xf0f8ff,
-                antialias: true
+                antialias: true,
+                autoDensity: true,
+                resolution: window.devicePixelRatio || 1
             });
 
-            await new Promise(r => setTimeout(r, 100));
-
             const modelPath = 'source/michelle_source/simple.model3.json';
-            console.log("Trying to load Live2D model from:", modelPath);
 
             try {
                 model = await PIXI.live2d.Live2DModel.from(modelPath);
                 app.stage.addChild(model);
 
-                model.scale.set(1, 0.7);
-                model.anchor.set(0.5, 0.5);
-                model.position.set(app.screen.width / 2, app.screen.height * 0.7);
+                // This function handles the scaling so it doesn't crop
+                const fitModel = () => {
+                    if (!model) return;
+
+                    // Calculate scale to fit the container (adjust 0.9 to change "zoom")
+                    const scaleX = (app.screen.width / model.width) * 0.8;
+                    const scaleY = (app.screen.height / model.height) * 0.8;
+                    const finalScale = Math.min(scaleX, scaleY);
+
+                    model.scale.set(finalScale);
+
+                    // Center the model
+                    model.anchor.set(0.5, 0.5);
+                    model.position.set(app.screen.width / 2, app.screen.height / 1.5);
+                };
+
+                // Call once on load
+                fitModel();
+
+                // Call every time the window resizes
+                app.renderer.on('resize', fitModel);
 
                 model.autoInteract = true;
-                console.log("Live2D model loaded successfully");
             } catch (err) {
                 console.error("Live2D load failed:", err);
                 document.getElementById('model-error').style.display = 'block';
-                document.getElementById('model-error').textContent = `Live2D failed: ${err.message}. Check path: ${modelPath}`;
             }
         }
+        function resizeCanvas() {
+            if (!app || !model) return;
+
+            const container = document.getElementById('live2d-container');
+            const screenWidth = container.clientWidth;
+            const screenHeight = container.clientHeight;
+            const targetRatio = 16 / 9;
+
+            let newWidth, newHeight;
+
+            // Calculate dimensions to fit 16:9 inside the container
+            if (screenWidth / screenHeight > targetRatio) {
+                newHeight = screenHeight;
+                newWidth = screenHeight * targetRatio;
+            } else {
+                newWidth = screenWidth;
+                newHeight = screenWidth / targetRatio;
+            }
+
+            // Resize the renderer
+            app.renderer.resize(newWidth, newHeight);
+
+            // Reposition the model relative to the NEW canvas size
+            model.scale.set(1); // Adjust this base scale as needed
+            model.anchor.set(0.5, 0.5);
+            model.position.set(newWidth / 2, newHeight * 0.6);
+        }
+        window.addEventListener('resize', resizeCanvas);
         initLive2D().catch(err => console.error(err));
 
         // ────────────────────────────────────────────────
@@ -186,7 +336,7 @@ Always start your reply with [lang:en-US] followed by the content.`
                                 audioUrl = result[1].url;
                                 break;
                             }
-                        } catch (e) {}
+                        } catch (e) { }
                     }
                 }
 
@@ -286,4 +436,5 @@ Always start your reply with [lang:en-US] followed by the content.`
         speechSynthesis.getVoices();
     </script>
 </body>
+
 </html>
