--- a/michelle_source.html
+++ b/michelle_source.html
@@ -373,21 +373,8 @@ Always start your reply with [lang:en-US] followed by the content.`
                 // Play audio
                 const audio = new Audio(audioUrl);
                 audio.crossOrigin = "anonymous";
-                // Update these lines inside your existing speak() function:
-                audio.onplay = () => {
-                    isListening = false; // Pause listening
-                    recognition.stop();  // Stop mic so she doesn't hear herself
-                    startMouthAnimation();
-                };
-
-                audio.onended = () => {
-                    stopMouthAnimation();
-                    // Resume listening after she finishes talking
-                    setTimeout(() => {
-                        isListening = true;
-                        recognition.start();
-                    }, 500); // 0.5s delay to ensure room is quiet
-                };
+                audio.onplay = startMouthAnimation;
+                audio.onended = stopMouthAnimation;
                 audio.onerror = (e) => {
                     console.error("Audio play error:", e);
                     stopMouthAnimation();
@@ -429,6 +416,7 @@ Always start your reply with [lang:en-US] followed by the content.`
 
             addMessage('user', question);
             document.getElementById('question').value = '';
+
             messages.push({ role: 'user', content: question });
 
             try {
@@ -447,22 +435,10 @@ Always start your reply with [lang:en-US] followed by the content.`
                 const langMatch = fullReply.match(/^\[lang:([a-zA-Z-]+)\]/i);
                 if (langMatch) replyText = fullReply.replace(langMatch[0], '').trim();
 
+
+                await speak(replyText);
                 addMessage('bot', replyText);
                 messages.push({ role: 'assistant', content: fullReply });
-
-                // --- SPLITTING LOGIC START ---
-                // Splits by . ! ? or , (followed by space)
-                const sentences = replyText.match(/[^.!?区域,]+[.!?区域,]+|\s*[^.!?区域,]+/g) || [replyText];
-
-                // Use a sequential loop to speak sentences one by one
-                for (const sentence of sentences) {
-                    const cleanSentence = sentence.trim();
-                    if (cleanSentence.length > 0) {
-                        console.log("Speaking segment:", cleanSentence);
-                        await speak(cleanSentence);
-                    }
-                }
-                // --- SPLITTING LOGIC END ---
 
             } catch (err) {
                 console.error(err);
@@ -484,62 +460,54 @@ Always start your reply with [lang:en-US] followed by the content.`
         speechSynthesis.getVoices();
 
         // ────────────────────────────────────────────────
-        // Continuous Speech to Text (STT) Setup
+        // Speech to Text (STT) Setup
         // ────────────────────────────────────────────────
         const micBtn = document.getElementById('mic-btn');
         const questionInput = document.getElementById('question');
-        let isListening = false;
 
         const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
 
         if (SpeechRecognition) {
             const recognition = new SpeechRecognition();
-            recognition.lang = 'en-US';
+            recognition.lang = 'en-US'; // You can change this to 'zh-HK' or 'ja-JP'
             recognition.interimResults = false;
-            recognition.continuous = false; // We handle continuity manually for better accuracy
+            recognition.continuous = false;
 
             micBtn.addEventListener('click', () => {
-                if (!isListening) {
-                    isListening = true;
+                try {
                     recognition.start();
-                } else {
-                    isListening = false;
+                } catch (e) {
                     recognition.stop();
                 }
             });
 
             recognition.onstart = () => {
                 micBtn.classList.add('recording');
-                micBtn.textContent = 'ON'; // Indicates Michelle is "Awake"
-                questionInput.placeholder = "Michelle is listening...";
+                micBtn.textContent = '🛑';
+                questionInput.placeholder = "Listening...";
             };
 
             recognition.onresult = (event) => {
                 const transcript = event.results[0][0].transcript;
-                if (transcript.trim().length > 0) {
-                    questionInput.value = transcript;
-                    sendQuestion();
-                }
+                questionInput.value = transcript;
+                // Automatically send the question after voice input
+                sendQuestion();
             };
 
             recognition.onend = () => {
-                // This is the "Continuous" magic: 
-                // If the user didn't manually stop it, restart the engine.
-                if (isListening) {
-                    recognition.start();
-                } else {
-                    micBtn.classList.remove('recording');
-                    micBtn.textContent = '🎤';
-                    questionInput.placeholder = "Ask a question...";
-                }
+                micBtn.classList.remove('recording');
+                micBtn.textContent = '🎤';
+                questionInput.placeholder = "Ask a question...";
             };
 
             recognition.onerror = (event) => {
-                // Ignore "no-speech" errors to prevent the loop from breaking
-                if (event.error === 'no-speech') return;
                 console.error("Speech Recognition Error: ", event.error);
-                isListening = false;
+                micBtn.classList.remove('recording');
+                micBtn.textContent = '🎤';
             };
+        } else {
+            micBtn.style.display = 'none';
+            console.warn("Speech Recognition not supported in this browser.");
         }
     </script>
 </body>
