--- a/michelle_source.html
+++ b/michelle_source.html
@@ -298,129 +298,97 @@ Always start your reply with [lang:en-US] followed by the content.`
         }
 
         // ────────────────────────────────────────────────
-        // TTS with Recursive Error Splitting
+        // TTS: Fetch All Chunks First, Then Play
         // ────────────────────────────────────────────────
         async function speak(text) {
             if (typeof text !== 'string' || !text.trim()) return;
 
-            console.log("Attempting to speak:", text.substring(0, 50) + "...");
+            // 1. Break text into chunks (sentences) to prevent API timeouts
+            const chunks = splitTextIntoChunks(text, 100); // 100 chars is a safe limit for this API
+            console.log(`Split into ${chunks.length} chunks. Fetching audio...`);
 
             try {
-                const base_url = "https://plachta-vits-umamusume-voice-synthesizer.hf.space/gradio_api/call/tts_fn";
-                const headers = { "Content-Type": "application/json" };
-                const payload = {
-                    data: [
-                        text,
-                        "特别周 Special Week (Umamusume Pretty Derby)",
-                        "English",
-                        0.75,
-                        false
-                    ]
-                };
+                // 2. Fetch all audio URLs in parallel
+                const audioUrlPromises = chunks.map(chunk => fetchAudioUrl(chunk));
+                const audioUrls = await Promise.all(audioUrlPromises);
 
-                // Step 1: Submit request
-                const submitRes = await fetch(base_url, {
-                    method: 'POST',
-                    headers,
-                    body: JSON.stringify(payload)
-                });
-                const submitData = await submitRes.json();
-                const event_id = submitData?.event_id;
-                if (!event_id) throw new Error("No event_id");
-
-                // Step 2: Poll result
-                const status_url = `${base_url}/${event_id}`;
-                const pollRes = await fetch(status_url, { method: 'GET' });
-                const pollText = await pollRes.text();
-
-                let audioUrl = null;
-                const lines = pollText.split('\n');
-                for (const line of lines) {
-                    if (line.startsWith("data:")) {
-                        const dataStr = line.replace("data: ", "");
-                        try {
-                            const result = JSON.parse(dataStr);
-                            if (Array.isArray(result) && result[1] && result[1].url) {
-                                audioUrl = result[1].url;
-                                break;
-                            }
-                        } catch (e) { }
+                // 3. Play them in sequence
+                console.log("All audio fetched. Starting playback...");
+                for (const url of audioUrls) {
+                    if (url) {
+                        await playAudio(url);
                     }
                 }
-
-                if (!audioUrl) throw new Error("No audio URL");
-
-                // Step 3: Play and Wait for completion
-                return new Promise((resolve, reject) => {
-                    const audio = new Audio(audioUrl);
-                    audio.crossOrigin = "anonymous";
-                    audio.onplay = startMouthAnimation;
-                    audio.onended = () => {
-                        stopMouthAnimation();
-                        resolve(); // Success!
-                    };
-                    audio.onerror = (e) => {
-                        stopMouthAnimation();
-                        reject(new Error("Audio playback failed"));
-                    };
-                    audio.play().catch(reject);
-                });
-
             } catch (err) {
-                console.warn("TTS Chunk failed, attempting to split...", err);
-
-                // --- RECURSIVE SPLITTING LOGIC ---
-                // Find the best place to split (., !, ?)
-                const splitIndex = findSplitPoint(text);
-
-                if (splitIndex !== -1) {
-                    const part1 = text.substring(0, splitIndex + 1).trim();
-                    const part2 = text.substring(splitIndex + 1).trim();
-
-                    if (part1 && part2) {
-                        console.log("Splitting text into two parts.");
-                        await speak(part1); // Speak first half
-                        return await speak(part2); // Speak second half
-                    }
-                }
-
-                // Final Fallback if it's still too long or cannot be split further
-                console.error("Split failed or text too short. Falling back to Browser TTS.");
+                console.error("Batch TTS failed, falling back to browser voice:", err);
                 fallbackBrowserTTS(text);
             }
         }
 
-        /**
-         * Finds a punctuation mark as close to the middle as possible
-         */
-        function findSplitPoint(text) {
-            const punctuations = /[.!?;]/g;
-            const matches = Array.from(text.matchAll(punctuations));
+        // Helper: Split text by punctuation (. ! ?)
+        function splitTextIntoChunks(text, maxLength) {
+            // Regex splits by . ! or ? but keeps the punctuation with the sentence
+            const sentences = text.match(/[^.!?]+[.!?]+/g) || [text];
+            const chunks = [];
+            let currentChunk = "";
 
-            if (matches.length === 0) return -1;
-
-            // Get the match closest to the middle of the string
-            const mid = text.length / 2;
-            let bestMatch = matches[0];
-
-            matches.forEach(match => {
-                if (Math.abs(match.index - mid) < Math.abs(bestMatch.index - mid)) {
-                    bestMatch = match;
+            sentences.forEach(sentence => {
+                if ((currentChunk + sentence).length < maxLength) {
+                    currentChunk += sentence;
+                } else {
+                    if (currentChunk) chunks.push(currentChunk.trim());
+                    currentChunk = sentence;
                 }
             });
-
-            return bestMatch.index;
+            if (currentChunk) chunks.push(currentChunk.trim());
+            return chunks;
         }
 
-        /**
-         * Extracted Browser TTS fallback
-         */
+        // Helper: Fetch a single audio URL from Gradio
+        async function fetchAudioUrl(text) {
+            const base_url = "https://plachta-vits-umamusume-voice-synthesizer.hf.space/gradio_api/call/tts_fn";
+            const payload = {
+                data: [text, "特别周 Special Week (Umamusume Pretty Derby)", "English", 0.75, false]
+            };
+
+            const submitRes = await fetch(base_url, {
+                method: 'POST',
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify(payload)
+            });
+            const { event_id } = await submitRes.json();
+
+            const pollRes = await fetch(`${base_url}/${event_id}`);
+            const pollText = await pollRes.text();
+
+            // Extract URL from the SSE (Server Sent Events) response
+            const match = pollText.match(/"url":\s*"(https:\/\/[^"]+)"/);
+            if (match && match[1]) return match[1];
+            throw new Error("Could not find audio URL in response");
+        }
+
+        // Helper: Play audio and return promise that resolves when finished
+        function playAudio(url) {
+            return new Promise((resolve, reject) => {
+                const audio = new Audio(url);
+                audio.crossOrigin = "anonymous";
+                audio.onplay = startMouthAnimation;
+                audio.onended = () => {
+                    stopMouthAnimation();
+                    resolve();
+                };
+                audio.onerror = (e) => {
+                    stopMouthAnimation();
+                    reject(e);
+                };
+                audio.play().catch(reject);
+            });
+        }
+
+        // Helper: Browser Fallback
         function fallbackBrowserTTS(text) {
             const utterance = new SpeechSynthesisUtterance(text);
             utterance.lang = "en-US";
-            const voices = speechSynthesis.getVoices();
-            const tracy = voices.find(v => v.name.includes("Tracy") || v.lang.includes("en-US"));
-            if (tracy) utterance.voice = tracy;
             utterance.pitch = 1.85;
             utterance.rate = 1.15;
             utterance.onstart = startMouthAnimation;
